# python_rust_demonstration

./: Dockerfile  container  requirements.txt
src/python/: angles.py  circle.py  gui.py  sanity_check.py  triangle.py
src/rust/hello/: Cargo.toml
src/rust/hello/src/: lib.rs
src/rust/rustic/: Cargo.toml
src/rust/rustic/src/: lib.rs
