[package]
name = "rustic"
version = "0.1.0"
authors = ["bj"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rustic"
crate-type = ["dylib"]

[dependencies]
numpy = "*"
ndarray = "*"


[dependencies.pyo3]
version = "0.8"
features = ["extension-module"]