[package]
name = "rustic"
version = "0.1.0"
authors = ["bj"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "rustic"
crate-type = ["dylib"]

[dependencies]
numpy = "0.7.0"
ndarray = "0.13"


[dependencies.pyo3]
version = "0.8"
features = ["extension-module"]